fix my mobile issues (crypto). Add svg icons for edit and delete buttons. align buttons right

--- a/input.css
+++ b/input.css
@@ -2,13 +2,17 @@
 @tailwind utilities;
 
 a {
-  color: var(--link-color);
+	color: var(--link-color);
 }
 
 div.clp_section_margin {
-  margin: 0 0 20px 0 !important;
+	margin: 0 0 20px 0 !important;
 }
 
-.internal-embed[alt="clipped"] h1 {
-  display: none;
+.internal-embed[alt='clipped'] h1 {
+	display: none;
+}
+
+.theme-dark .clp_action_buttons {
+	stroke: white;
 }
